--- a/fastfood-notification/k8s/fastfood-notification-secrets.yml
+++ b/fastfood-notification/k8s/fastfood-notification-secrets.yml
@@ -7,5 +7,5 @@ stringData:
   MAILTRAP_USERNAME: api
   MAILTRAP_PASSWORD: 2172c6459e1f4c75a49418c9f2762ae0
   RABBIT_HOST: fastfood-production-rabbit-service
-  RABBIT_HOST: product-production
+  RABBIT_USERNAME: product-production
   RABBIT_PASSWORD: product-production-123
