--- a/fastfood-notification/k8s/fastfood-notification-deployment.yml
+++ b/fastfood-notification/k8s/fastfood-notification-deployment.yml
@@ -17,7 +17,7 @@ spec:
       containers:
         - name: fastfood-notification-container
           image: soatpostech/fastfood-notification:latest
-          imagePullPolicy: Always
+          imagePullPolicy: Never
           ports:
             - containerPort: 8084
           env:
@@ -49,7 +49,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: fastfood-notification-secret-opaque
-                  key: RABBIT_PASSOWORD
+                  key: RABBIT_PASSWORD
 
   selector:
     matchLabels:
