--- a/fastfood-notification/pom.xml
+++ b/fastfood-notification/pom.xml
@@ -63,6 +63,13 @@
 						</goals>
 					</execution>
 					<execution>
+						<id>report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+					<execution>
 					<id>jacoco-report</id>
 					<goals>
 						<goal>report</goal>
