--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -94,29 +94,29 @@ jobs:
       run: cd fastfood-notification && mvn dockerfile:push
 
   
-  # Deploy_EKS:
-  #     name: Deploy on EKS
-  #     needs: Build
-  #     runs-on: ubuntu-latest
+  Deploy_EKS:
+      name: Deploy on EKS
+      needs: Build
+      runs-on: ubuntu-latest
      
-  #     steps:
+      steps:
    
-  #     - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
  
-  #     - name: Configurando Credenciais AWS
-  #       uses: aws-actions/configure-aws-credentials@v1
-  #       with:
-  #         aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
-  #         aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-  #         aws-region: us-east-1
+      - name: Configurando Credenciais AWS
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
+          aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+          aws-region: us-east-1
  
-  #     - name: Kubectl Tool Setup
-  #       uses: Azure/setup-kubectl@v3
+      - name: Kubectl Tool Setup
+        uses: Azure/setup-kubectl@v3
  
-  #     - run: aws sts get-caller-identity
+      - run: aws sts get-caller-identity
        
-  #     - run: aws eks update-kubeconfig --region us-east-1 --name fastfood-management-cluster
+      - run: aws eks update-kubeconfig --region us-east-1 --name fastfood-management-cluster
 
-  #     - run: cd fastfood-notification && kubectl apply -k k8s 
-  #     if: github.event_name == 'push' && github.ref == 'refs/heads/main'      
+      - run: cd fastfood-notification && kubectl apply -k k8s 
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main'      
     
